name:                th-relative-paths
version:             0.1.0.0
synopsis:            Load files in TH, relative to cabal file location
description:         Please see README.md
homepage:            http://github.com/githubuser/th-relative-paths#readme
license:             MIT
license-file:        LICENSE
author:              Michael Sloan
maintainer:          sloan@fpcomplete.com
copyright:           2016 FP Complete
category:            Template Haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.TH.RelativePaths
  build-depends:       base >= 4.5 && < 5,
                       bytestring,
                       directory,
                       filepath,
                       template-haskell >= 2.7,
                       text
  default-language:    Haskell2010
