name:                th-storable
version:             0.1.0.0
synopsis:            Generate instances for Storable
description:         Please see README.md
homepage:            https://github.com/fpco/th-utilities#readme
license:             MIT
license-file:        LICENSE
author:              Michael Sloan
maintainer:          sloan@fpcomplete.com
copyright:           2016 FP Complete
category:            Template Haskell, Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Foreign.Storable.TH
  build-depends:       base >= 4.7 && < 5
                     , syb
                     , template-haskell
                     , containers
                     , ghc-prim
                     , primitive
                     , th-utilities
  default-language:    Haskell2010

test-suite th-storable-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , smallcheck
                     , th-storable
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/th-utilities
