name:                th-utilities
version:             0.1.0.0
synopsis:            Collection of useful functions for use with Template Haskell
description:         Please see README.md
homepage:            https://github.com/fpco/th-utilities#readme
license:             MIT
license-file:        LICENSE
author:              Michael Sloan
maintainer:          sloan@fpcomplete.com
copyright:           2016 FP Complete
category:            Template Haskell
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TH.RelativePaths
                       TH.ReifyDataType
                       TH.Utilities
                       TH.Derive
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       directory,
                       filepath,
                       syb,
                       template-haskell >= 2.7,
                       text,
                       th-orphans
  default-language:    Haskell2010

test-suite test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.TH
    build-depends:    base,
                      th-utilities,
                      template-haskell
    default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/th-utilities
